@@ -1,6 +1,6 @@
 ################################################################################
-# mesos-master:1.1.0
-# Date: 9/29/2015
+# mesos-master: 1.1.0
+# Date: 10/20/2015
 # Mesos Version: 0.24.1-0.2.35.ubuntu1404
 #
 # Description:
